<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_footer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/header_color"
                android:textSize="@dimen/_25sdp"/>

            <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/mobile_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_100sdp">

                <EditText
                    android:id="@+id/et_Phone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@drawable/table_bg"
                    android:hint="@string/enter_here"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/footer_bg"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:orientation="vertical">

            <com.lbit.fleet.customfonts.MyTextViewPoppinsMedium
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="start"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingRight="@dimen/_30sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/powered_by"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>