<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="end"
            android:gravity="end"
            android:orientation="horizontal">

            <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                android:id="@+id/tv_pending"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pending"
                android:textColor="@color/header_color"
                android:textSize="@dimen/_15sdp" />

            <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                android:id="@+id/tv_live"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/live"
                android:layout_marginLeft="@dimen/_20sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_15sdp" />

            <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                android:id="@+id/tv_completed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/completed"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_bg"
                android:hint="@string/search_mobile"
                android:textColorHint="@color/gray"
                android:padding="@dimen/_7sdp"
                android:drawableStart="@drawable/ic_search"
                android:textColor="@color/text_color"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/ll_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ll_no_data_found"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                android:id="@+id/no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No Data Found"
                android:textSize="20dp"
                android:visibility="visible" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>