<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="vertical">

                <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_vehicle"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/search_bg">

                        <Spinner
                            android:id="@+id/sp_vehicle_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/_7sdp" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llVehicleDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/text_bg"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/make"
                            android:textColor="@color/header_color"
                            android:textSize="@dimen/_15sdp" />

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/model"
                            android:textColor="@color/header_color"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsMedium
                            android:id="@+id/tvMake"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsMedium
                            android:id="@+id/tvModel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text=""
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/fuel_type"
                            android:textColor="@color/header_color"
                            android:textSize="@dimen/_15sdp" />

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/superior"
                            android:textColor="@color/header_color"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsMedium
                            android:id="@+id/tvFuel"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                        <com.lbit.fleet.customfonts.MyTextViewPoppinsMedium
                            android:id="@+id/tvSuperior"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_vehicleCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicle_condition"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/_15sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/text_bg"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rg_vehicle_condition"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rb_running"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/text_color"
                            android:padding="@dimen/_7sdp"
                            android:text="@string/running"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                        <RadioButton
                            android:id="@+id/rb_breakdown"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:buttonTint="@color/text_color"
                            android:padding="@dimen/_7sdp"
                            android:text="@string/breakdown"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_15sdp" />

                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_part_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="end"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                    android:id="@+id/tv_add_parts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:gravity="end"
                    android:text="@string/add_parts"
                    android:textColor="@color/header_color"
                    android:textSize="@dimen/_17sdp" />

                <com.lbit.fleet.customfonts.MyTextViewPoppinsSemiBold
                    android:id="@+id/tv_add_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/summary"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/_17sdp" />

            </LinearLayout>

            <include layout="@layout/add_parts" />

            <include layout="@layout/parts_summary" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>